# MyApi

./: .gitignore  CMakeLists.txt  test.sh
include/: api_response.h  request.h  server.h  tpool.h
include/config/: config.h  db.h  router.h  routes.h
include/controllers/: employeeController.h  newsController.h  positionController.h  statController.h
include/services/: employeeService.h  newsService.h  positionService.h  statService.h
src/: api_response.c  main.c  request.c  server.c
src/config/: config.c  db.c  router.c  routes.c
src/controllers/: employeeController.c  newsController.c  positionController.c  statController.c
src/services/: employeeService.c  newsService.c  positionService.c  statService.c
